feat(menu): add tags menu endpoint
