# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\api\MenuController;
+use App\Http\Controllers\api\TagsController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -16,6 +17,7 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::get('/restaurants/{restaurant}/menus', [MenuController::class, 'index']);
+Route::get('/restaurants/{restaurant}/tags', [TagsController::class, 'index']);
 
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
